--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,22 +9,23 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 1400px;
-  height: 600px;
+  min-height: 1000px;
   background-color: rgb(211, 211, 211);
 }
 
 .piano {
   border: 2px solid #000;
+
   &__panel {
     height: 60px;
     width: 100%;
     background-color: #000;
   }
+
   &__redLine {
     height: 5px;
     width: 100%;
-    background-color: #CA0000;
+    background-color: #ca0000;
   }
 }
 
@@ -35,26 +36,46 @@ body {
   min-width: 300px;
   height: 200px;
   background-color: rgba(255, 255, 255, 0.5);
-  
 }
 
 .key {
   width: 40px;
   height: 200px;
+  border-radius: 0 0 5px 5px;
+
   &__white {
     background-color: rgb(255, 255, 255);
     border: 1px solid #000;
   }
+
   &__black {
     position: absolute;
     width: 20px;
     height: 120px;
     background-color: rgb(0, 0, 0);
+
     &:nth-child(2) {
       left: 11%;
     }
-    &:nth-child(3) {
-      left: 60px;
+
+    &:nth-child(4) {
+      left: 25%;
     }
+
+    &:nth-child(7) {
+      left: 54%;
+    }
+
+    &:nth-child(9) {
+      left: 68%;
+    }
+
+    &:nth-child(11) {
+      left: 82%;
+    }
+  }
+
+  &-push {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
 }
