--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,22 +10,30 @@ body {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  min-height: 1000px;
+  min-height: 700px;
   background-image: url('../image/fone.png');
 }
 
 .tools {
-  position: absolute;
-  top: 600px;
-  right: 500px;
+  margin-bottom: 100px;
 }
 
 .musicStaff {
-  background-image: url('../image/2.png');
-  background-repeat: no-repeat;
-  background-size: 100%;
-  width: 600px;
-  height: 400px;
+  &-treble {
+    width: 600px;
+    height: 300px;
+    background-image: url('../image/2.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+  }
+
+  &-bass {
+    width: 600px;
+    height: 300px;
+    background-image: url('../image/3.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+  }
 }
 
 .piano {
