--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,7 +5,7 @@ body {
   font-family: sans-serif;
 }
 
-.main {
+.app {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -37,6 +37,8 @@ body {
 }
 
 .piano {
+  min-width: 300px;
+  min-height: 200px;
   border: 2px solid #000;
 
   &__panel {
