--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,6 +19,16 @@ body {
 }
 
 .musicStaff {
+  &__note {
+    background-image: url('../image/nota.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    min-width: 100px;
+    min-height: 150px;
+    position: absolute;
+    margin-left: 350px;
+  }
+
   &-treble {
     width: 600px;
     height: 300px;
