--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,7 +18,7 @@ body {
   margin-bottom: 100px;
 }
 
-.musicStaff {
+.musicClef {
   &__note {
     background-image: url('../image/nota.png');
     background-repeat: no-repeat;
