--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -52,9 +52,13 @@ body {
   border: 2px solid #000;
 
   &__panel {
+    padding-top: 20px;
+    text-align: center;
     height: 60px;
     width: 100%;
     background-color: #000;
+    box-sizing: border-box;
+    color: #fff;
   }
 
   &__redLine {
