--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,14 +15,16 @@ body {
 }
 
 .stan {
-  min-width: 700px;
-  min-height: 400px;
+  min-width: 600px;
+  min-height: 300px;
   background-image: url('../image/stan.png');
+  background-repeat: no-repeat;
+  background-size: 100%;
 
   &__clef {
     &-treble {
-      width: 200px;
-      height: 350px;
+      width: 100px;
+      height: 170px;
       background-image: url('../image/treble.png');
       background-repeat: no-repeat;
       background-size: 100%;
@@ -53,8 +55,8 @@ body {
       background-image: url('../image/noteDown.png');
       background-repeat: no-repeat;
       background-size: 100%;
-      min-width: 250px;
-      min-height: 250px;
+      min-width: 100px;
+      min-height: 100px;
       position: absolute;
       margin-left: 450px;
       margin-top: 100px;
