--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,6 +15,7 @@ body {
 }
 
 .stan {
+  display: flex;
   min-width: 600px;
   min-height: 300px;
   background-image: url('../image/stan.png');
@@ -31,9 +32,9 @@ body {
     }
 
     &-bass {
-      margin-top: 98px;
-      width: 340px;
-      height: 240px;
+      margin-top: 40px;
+      width: 170px;
+      height: 140px;
       background-image: url('../image/bass.png');
       background-repeat: no-repeat;
       background-size: 100%;
@@ -41,97 +42,81 @@ body {
   }
 
   &__note {
-    display: none;
-    background-image: url('../image/noteUp.png');
     background-repeat: no-repeat;
     background-size: 100%;
-    min-width: 250px;
-    min-height: 250px;
+    min-width: 120px;
+    min-height: 120px;
     position: absolute;
     margin-left: 450px;
 
-    &#do {
-      display: block;
-      background-image: url('../image/noteDown.png');
-      background-repeat: no-repeat;
-      background-size: 100%;
-      min-width: 100px;
-      min-height: 100px;
-      position: absolute;
-      margin-left: 450px;
+    &#do-one {
+      background-image: url('../image/noteUp.png');
       margin-top: 100px;
     }
 
-    &#doDies {
-      display: block;
-      background-image: url('../image/noteDown.png');
-      background-repeat: no-repeat;
-      background-size: 100%;
-      min-width: 250px;
-      min-height: 250px;
-      position: absolute;
-      margin-left: 450px;
+    &#re-one {
+      background-image: url('../image/noteUp.png');
+      margin-top: 95px;
+    }
+
+    &#mi-one {
+      background-image: url('../image/noteUp.png');
       margin-top: 90px;
     }
 
-    &#re {
-      display: block;
-      background-image: url('../image/noteDown.png');
-      background-repeat: no-repeat;
-      background-size: 100%;
-      min-width: 250px;
-      min-height: 250px;
-      position: absolute;
-      margin-left: 450px;
+    &#fa-one {
+      background-image: url('../image/noteUp.png');
+      margin-top: 85px;
+    }
+
+    &#sol-one {
+      background-image: url('../image/noteUp.png');
       margin-top: 80px;
     }
 
-    &#reDies {
-      display: block;
-      background-image: url('../image/noteDown.png');
-      background-repeat: no-repeat;
-      background-size: 100%;
-      min-width: 250px;
-      min-height: 250px;
-      position: absolute;
-      margin-left: 450px;
+    &#lya-one {
+      background-image: url('../image/noteUp.png');
+      margin-top: 75px;
+    }
+
+    &#si-one {
+      background-image: url('../image/noteUp.png');
       margin-top: 70px;
     }
 
-    &#mi {
-      display: block;
-      background-image: url('../image/noteDown.png');
-      background-repeat: no-repeat;
-      background-size: 100%;
-      min-width: 250px;
-      min-height: 250px;
-      position: absolute;
-      margin-left: 450px;
-      margin-top: 60px;
+    &#do-two {
+      background-image: url('../image/noteUp.png');
+      margin-top: 100px;
     }
 
-    &#fa {
-      display: block;
-      background-image: url('../image/noteDown.png');
-      background-repeat: no-repeat;
-      background-size: 100%;
-      min-width: 250px;
-      min-height: 250px;
-      position: absolute;
-      margin-left: 450px;
-      margin-top: 50px;
+    &#re-two {
+      background-image: url('../image/noteUp.png');
+      margin-top: 95px;
     }
 
-    &#faDies {
-      display: block;
-      background-image: url('../image/noteDown.png');
-      background-repeat: no-repeat;
-      background-size: 100%;
-      min-width: 250px;
-      min-height: 250px;
-      position: absolute;
-      margin-left: 450px;
-      margin-top: 40px;
+    &#mi-two {
+      background-image: url('../image/noteUp.png');
+      margin-top: 90px;
+    }
+
+    &#fa-two {
+      background-image: url('../image/noteUp.png');
+      margin-top: 85px;
+    }
+
+    &#sol-two {
+      background-image: url('../image/noteUp.png');
+      margin-top: 80px;
+    }
+
+    &#lya-two {
+      background-image: url('../image/noteUp.png');
+      margin-top: 75px;
+    }
+
+    &#si-two {
+      background-image: url('../image/noteUp.png');
+      margin-top: 70px;
     }
 
     &#sol {
